# authsome

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  CortexSync-Elevate-Your-Mind.html  CortexSync-Elevate-Your-Mind.jsx  DESIGN.html  NeuroSync-Master-Your-Mind-DESIGN.md  README.md  TODOS.md  design.md  pyproject.toml  refactoring.md  renovate.json
.claude-plugin/: marketplace.json
.claude/commands/: run-evals.md
.github/: pull_request_template.md
.github/workflows/: pr-title.yml  publish-rc.yml  publish.yml  release-please.yml  test.yml
66/8250951996/: metadata.json
66/8250951996/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
81/809e52b50a/: metadata.json
81/809e52b50a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
81/809e52b50a/1/: metadata.json  prompt.txt
ab/4984c61c3f/: metadata.json
ab/4984c61c3f/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
bf/4cd187a6a7/: metadata.json
bf/4cd187a6a7/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
cc/37f3a987cc/0/: content_hash.txt  full.jsonl
d0/701895e702/: metadata.json
d0/701895e702/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
d0/701895e702/1/: content_hash.txt  full.jsonl  metadata.json
d9/b357881fc6/: metadata.json
d9/b357881fc6/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
docs/: UBIQUITOUS_LANGUAGE.md  cli.md  manual-testing.md  refactor.md  register-provider.md  security.md
docs/adr/: 0001-provider-client-record-server-scope.md  0002-server-registered-identities.md  0003-principal-owned-vault.md  0003-proxy-unmatched-pass-through.md
docs/agents/: domain.md
docs/internal/: authsome-design.md  cli-design-review.md  manual-testing.md
docs/site/: README.md  changelog.mdx  compared.mdx  design.md  docs.json  index.mdx  installation.mdx  quickstart.mdx  roadmap.mdx
docs/site/concepts/: architecture.mdx  credential-storage.mdx  profiles-vs-connections.mdx  provider-registry.mdx  proxy-injection.mdx  the-daemon.mdx
docs/site/guides/: custom-providers.mdx  headless-device-code.mdx  login-with-oauth.mdx  multiple-connections.mdx  profiles.mdx  run-agents-with-proxy.mdx  use-api-keys.mdx
docs/site/reference/: audit-log.mdx  bundled-providers.mdx  cli.mdx  daemon-api.mdx  environment-variables.mdx  file-layout.mdx  (+2 more)
docs/specs/: authsome-v1.md
evals/: .gitignore  evals.json  generate_report.py  run_evals.py  setup.md
skills/authsome/: SKILL.md
src/authsome/: __init__.py  errors.py  paths.py  utils.py
tests/: conftest.py
tests/actors/: test_registry.py
tests/auth/: test_auth_layer.py  test_flows.py  test_models.py  test_service.py  test_service_provider_clients.py  test_url_template.py
tests/cli/: conftest.py  test_client_signing.py  test_daemon.py  test_doctor.py  test_get.py  test_helpers.py  test_identity.py  test_import_env.py  test_init.py  test_list.py  test_login.py  test_logout.py  test_proxy.py  test_register.py  test_revoke.py  test_ui.py  test_whoami.py
tests/common/: test_audit.py  test_errors.py  test_keychain.py  test_logging.py  test_register_cli.py  test_utils.py
tests/identity/: test_identity.py  test_proof.py  test_registry.py
tests/proxy/: test_proxy.py
tests/server/: test_analytics.py  test_audit_routes.py  test_auth_sessions.py  test_hosted_auth.py  test_identity_bootstrap.py  test_ownership.py  test_pop_auth.py  test_provider_operation_policy.py  test_ui_dashboard.py  test_ui_sessions.py
tests/vault/: test_crypto.py  test_rekey.py  test_store.py
(+213 files in other folders)
