[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authsome"
version = "0.3.1"
description = "A portable local authentication library for AI agents and developer tools"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [
    { name = "Manoj Bajaj", email = "manojbajaj95@gmail.com" },
]
keywords = ["auth", "credentials", "oauth2", "api-key", "mcp", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "cryptography>=41.0",
    "keyring>=24.0",
    "click>=8.0",
    "loguru>=0.7",
    "mitmproxy>=11.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.27",
    "jinja2>=3.1",
    "py-key-value-aio[disk]",
    "pyjwt>=2.12.1",
    "base58>=2.1.1",
    "posthog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0",
    "ruff>=0.9",
    "ty",
    "httpx>=0.28.1",
]

[project.scripts]
authsome = "authsome.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/authsome"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["authsome"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 20

[dependency-groups]
dev = []
